# Unit-Test-Generator-for-C-

./: .gitignore  CMakeLists.txt  README.md  demo.py  requirements.txt  test_system.py
config/: llm_config.yaml
scripts/: build_manager.py  coverage_analyzer.py  cpp_analyzer.py  llm_client.py  setup.py  test_generator.py
src/: calculator.cpp  calculator.h  main.cpp  string_utils.cpp  string_utils.h
yaml_instructions/: build_fix.yaml  initial_generation.yaml  refinement.yaml
